# Airbnb-Price-Prediction

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  config.json  dict_vectorizer.pkl  docker-compose.yml  killakill.bat  pyproject.toml  requirements.txt  start_mlflow.bat
.github/workflows/: main.yml
api/: api.py
infrastructure/: main.tf  terraform.tfstate  terraform.tfstate.backup  var.tf
model_insight/: EvidentlyReport.py
model_insight/grafana/provisionning/datasources/: datasources.yaml
workflow_mgmt/: ModelWrapper.py  data_ops.py  evidently_monitoring.py  model_ops.py  runner.py
