[tool.poetry]
name = "airbnb-price-prediction"
version = "0.1.0"
description = "MLOps project in the case of airbnb price prediction"
authors = ["FaresAmiar <amiarfares@gmail.com>"]
readme = "README.md"
packages = [{include = "airbnb_price_prediction"}]

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
prefect = "^2.14.6"
mlflow = "^2.8.1"
scikit-learn = "^1.3.2"
pandas = "^2.1.3"
pytest = "^7.4.3"
pre-commit = "^3.5.0"
flake8 = "^6.1.0"
black = "^23.11.0"
evidently = "^0.4.9"
gdown = "^4.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
